# owlang

./: compiler.cabal  input.txt  owlang.cabal
src/: Main.hs  Types.hs
src/Backend/: IR.hs
src/Frontend/: AST.hs  Lex.hs  Parse.hs  SemAnalysis.hs
