cabal-version:      3.0
name:               owlang
version:            0.0.1
build-type:         Simple

common warnings
    ghc-options: -Wall

executable owl
    import: warnings
    main-is: Main.hs
    other-modules:
        Types,
        Frontend.Lex,
        Frontend.Parse,
        Frontend.SemAnalysis,
        Frontend.AST,
        Backend.IR,
    build-depends:
        base,
        megaparsec,
        parser-combinators,
        mtl,
        text,
        either,
        containers,
        optparse-applicative,
    hs-source-dirs:   src
    default-language: Haskell2010
